[gd_scene load_steps=13 format=3 uid="uid://bemjvh8q80wjp"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dn4gun1vjcfb6" path="res://background.png" id="2"]
[ext_resource type="FontFile" uid="uid://cpsr652smhl50" path="res://fonts/firasans-book-32.font" id="3"]
[ext_resource type="FontFile" uid="uid://dbkdvb8ajxt7t" path="res://fonts/firasans-book-16.font" id="4"]
[ext_resource type="Script" path="res://scripts/controls.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://ef1d8cbxdlxd" path="res://sprites/icons/arrow-up.png" id="6"]
[ext_resource type="Texture2D" uid="uid://5xm1xhil44xv" path="res://sprites/icons/arrow-down.png" id="7"]
[ext_resource type="Texture2D" uid="uid://83aawkilo6he" path="res://sprites/icons/arrow-left.png" id="8"]
[ext_resource type="Texture2D" uid="uid://coytxxeaxyc4m" path="res://sprites/icons/arrow-right.png" id="9"]
[ext_resource type="Texture2D" uid="uid://cwqlo1gqx6hxq" path="res://sprites/pickups/bomb_increase.png" id="10"]

[sub_resource type="SystemFont" id="SystemFont_5unbx"]

[sub_resource type="LabelSettings" id="LabelSettings_flg4j"]
font = SubResource("SystemFont_5unbx")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Sprite2D" type="Sprite2D" parent="Background"]
modulate = Color(1, 1, 0.746254, 0.492285)
texture = ExtResource("2")
centered = false

[node name="MainMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 0
offset_left = 96.0
offset_top = 64.0
offset_right = 384.0
offset_bottom = 98.0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3")
text = "DynaDungeons"
label_settings = SubResource("LabelSettings_flg4j")

[node name="NewGame" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 256.0
offset_top = 128.0
offset_right = 416.0
offset_bottom = 160.0
text = "New Game"

[node name="GoSettings" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 256.0
offset_top = 192.0
offset_right = 416.0
offset_bottom = 224.0
text = "Settings"

[node name="Quit" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 256.0
offset_top = 320.0
offset_right = 416.0
offset_bottom = 352.0
text = "Quit"

[node name="Settings" type="Control" parent="."]
anchors_preset = 0
offset_left = 480.0
offset_right = 520.0
offset_bottom = 40.0

[node name="NbPlayers" type="Control" parent="Settings"]
anchors_preset = 0
offset_left = 64.0
offset_top = 32.0
offset_right = 104.0
offset_bottom = 72.0

[node name="Label" type="Label" parent="Settings/NbPlayers"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 32.0
size_flags_vertical = 0
text = "Players:"

[node name="Slider" type="HSlider" parent="Settings/NbPlayers"]
layout_mode = 0
offset_left = 96.0
offset_right = 160.0
offset_bottom = 20.0
min_value = 1.0
max_value = 4.0
value = 1.0
rounded = true

[node name="NbLives" type="Control" parent="Settings"]
anchors_preset = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 104.0
offset_bottom = 104.0

[node name="Label" type="Label" parent="Settings/NbLives"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 32.0
size_flags_vertical = 0
text = "Lives:"

[node name="Slider" type="HSlider" parent="Settings/NbLives"]
layout_mode = 0
offset_left = 96.0
offset_right = 160.0
offset_bottom = 20.0
min_value = 1.0
max_value = 5.0
value = 1.0
rounded = true

[node name="Fullscreen" type="CheckBox" parent="Settings"]
layout_mode = 0
offset_left = 96.0
offset_top = 96.0
offset_right = 197.0
offset_bottom = 124.0
text = "Fullscreen"

[node name="Music" type="CheckBox" parent="Settings"]
layout_mode = 0
offset_left = 96.0
offset_top = 128.0
offset_right = 197.0
offset_bottom = 156.0
theme_override_fonts/font = ExtResource("4")
text = "Music"

[node name="MusicVolume" type="HSlider" parent="Settings"]
layout_mode = 0
offset_left = 256.0
offset_top = 136.0
offset_right = 320.0
offset_bottom = 152.0
max_value = 2.0
step = 0.2
value = 1.0

[node name="SFX" type="CheckBox" parent="Settings"]
layout_mode = 0
offset_left = 96.0
offset_top = 160.0
offset_right = 221.0
offset_bottom = 188.0
text = "Sound effects"

[node name="SFXVolume" type="HSlider" parent="Settings"]
layout_mode = 0
offset_left = 256.0
offset_top = 168.0
offset_right = 320.0
offset_bottom = 184.0
max_value = 3.0
step = 0.2
value = 1.0

[node name="GoControls" type="Button" parent="Settings"]
layout_mode = 0
offset_left = 256.0
offset_top = 224.0
offset_right = 416.0
offset_bottom = 256.0
text = "Controls"

[node name="GoBack" type="Button" parent="Settings"]
layout_mode = 0
offset_left = 256.0
offset_top = 320.0
offset_right = 416.0
offset_bottom = 352.0
text = "Back"

[node name="Controls" type="Control" parent="."]
anchors_preset = 0
offset_left = 960.0
offset_right = 1000.0
offset_bottom = 40.0
script = ExtResource("5")

[node name="ContextHelp" type="Label" parent="Controls"]
layout_mode = 0
offset_left = 64.0
offset_top = 32.0
offset_right = 416.0
offset_bottom = 64.0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4")
text = "Click a key binding to reassign it."

[node name="Player1" type="Control" parent="Controls"]
anchors_preset = 0
offset_left = 48.0
offset_top = 8.0
offset_right = 88.0
offset_bottom = 48.0

[node name="Label" type="Label" parent="Controls/Player1"]
layout_mode = 0
offset_left = 56.0
offset_top = 64.0
offset_right = 121.0
offset_bottom = 83.0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4")
text = "Player 1"

[node name="move_up" type="Button" parent="Controls/Player1"]
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 112.0
offset_bottom = 117.0

[node name="move_down" type="Button" parent="Controls/Player1"]
layout_mode = 0
offset_left = 64.0
offset_top = 136.0
offset_right = 112.0
offset_bottom = 157.0

[node name="move_left" type="Button" parent="Controls/Player1"]
layout_mode = 0
offset_left = 64.0
offset_top = 176.0
offset_right = 112.0
offset_bottom = 197.0

[node name="move_right" type="Button" parent="Controls/Player1"]
layout_mode = 0
offset_left = 64.0
offset_top = 216.0
offset_right = 112.0
offset_bottom = 237.0

[node name="drop_bomb" type="Button" parent="Controls/Player1"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 112.0
offset_bottom = 277.0

[node name="Player2" type="Control" parent="Controls"]
anchors_preset = 0
offset_left = 128.0
offset_top = 8.0
offset_right = 168.0
offset_bottom = 48.0

[node name="Label" type="Label" parent="Controls/Player2"]
layout_mode = 0
offset_left = 56.0
offset_top = 64.0
offset_right = 122.0
offset_bottom = 83.0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4")
text = "Player 2"

[node name="move_up" type="Button" parent="Controls/Player2"]
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 112.0
offset_bottom = 117.0

[node name="move_down" type="Button" parent="Controls/Player2"]
layout_mode = 0
offset_left = 64.0
offset_top = 136.0
offset_right = 112.0
offset_bottom = 157.0

[node name="move_left" type="Button" parent="Controls/Player2"]
layout_mode = 0
offset_left = 64.0
offset_top = 176.0
offset_right = 112.0
offset_bottom = 197.0

[node name="move_right" type="Button" parent="Controls/Player2"]
layout_mode = 0
offset_left = 64.0
offset_top = 216.0
offset_right = 112.0
offset_bottom = 237.0

[node name="drop_bomb" type="Button" parent="Controls/Player2"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 112.0
offset_bottom = 277.0

[node name="Player3" type="Control" parent="Controls"]
anchors_preset = 0
offset_left = 208.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 48.0

[node name="Label" type="Label" parent="Controls/Player3"]
layout_mode = 0
offset_left = 56.0
offset_top = 64.0
offset_right = 122.0
offset_bottom = 83.0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4")
text = "Player 3"

[node name="move_up" type="Button" parent="Controls/Player3"]
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 112.0
offset_bottom = 117.0

[node name="move_down" type="Button" parent="Controls/Player3"]
layout_mode = 0
offset_left = 64.0
offset_top = 136.0
offset_right = 112.0
offset_bottom = 157.0

[node name="move_left" type="Button" parent="Controls/Player3"]
layout_mode = 0
offset_left = 64.0
offset_top = 176.0
offset_right = 112.0
offset_bottom = 197.0

[node name="move_right" type="Button" parent="Controls/Player3"]
layout_mode = 0
offset_left = 64.0
offset_top = 216.0
offset_right = 112.0
offset_bottom = 237.0

[node name="drop_bomb" type="Button" parent="Controls/Player3"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 112.0
offset_bottom = 277.0

[node name="Player4" type="Control" parent="Controls"]
anchors_preset = 0
offset_left = 288.0
offset_top = 8.0
offset_right = 328.0
offset_bottom = 48.0

[node name="Label" type="Label" parent="Controls/Player4"]
layout_mode = 0
offset_left = 56.0
offset_top = 64.0
offset_right = 122.0
offset_bottom = 83.0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4")
text = "Player 4"

[node name="move_up" type="Button" parent="Controls/Player4"]
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 112.0
offset_bottom = 117.0

[node name="move_down" type="Button" parent="Controls/Player4"]
layout_mode = 0
offset_left = 64.0
offset_top = 136.0
offset_right = 112.0
offset_bottom = 157.0

[node name="move_left" type="Button" parent="Controls/Player4"]
layout_mode = 0
offset_left = 64.0
offset_top = 176.0
offset_right = 112.0
offset_bottom = 197.0

[node name="move_right" type="Button" parent="Controls/Player4"]
layout_mode = 0
offset_left = 64.0
offset_top = 216.0
offset_right = 112.0
offset_bottom = 237.0

[node name="drop_bomb" type="Button" parent="Controls/Player4"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 112.0
offset_bottom = 277.0

[node name="GoBack" type="Button" parent="Controls"]
layout_mode = 0
offset_left = 256.0
offset_top = 320.0
offset_right = 416.0
offset_bottom = 352.0
theme_override_fonts/font = ExtResource("4")
text = "Back"

[node name="MoveUp" type="Sprite2D" parent="Controls"]
position = Vector2(64, 112)
texture = ExtResource("6")

[node name="MoveDown" type="Sprite2D" parent="Controls"]
position = Vector2(64, 152)
texture = ExtResource("7")

[node name="MoveLeft" type="Sprite2D" parent="Controls"]
position = Vector2(64, 192)
texture = ExtResource("8")

[node name="MoveRight" type="Sprite2D" parent="Controls"]
position = Vector2(64, 232)
texture = ExtResource("9")

[node name="DropBomb" type="Sprite2D" parent="Controls"]
position = Vector2(64, 272)
texture = ExtResource("10")
hframes = 4

[connection signal="pressed" from="MainMenu/NewGame" to="." method="new_game"]
[connection signal="pressed" from="MainMenu/GoSettings" to="." method="goto_settings"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="quit"]
[connection signal="value_changed" from="Settings/NbPlayers/Slider" to="." method="settings_set_players"]
[connection signal="value_changed" from="Settings/NbLives/Slider" to="." method="settings_set_lives"]
[connection signal="toggled" from="Settings/Fullscreen" to="." method="settings_toggle_fullscreen"]
[connection signal="toggled" from="Settings/Music" to="." method="settings_toggle_music"]
[connection signal="value_changed" from="Settings/MusicVolume" to="." method="settings_set_music_volume"]
[connection signal="toggled" from="Settings/SFX" to="." method="settings_toggle_sfx"]
[connection signal="value_changed" from="Settings/SFXVolume" to="." method="settings_set_sfx_volume"]
[connection signal="pressed" from="Settings/GoControls" to="." method="goto_controls"]
[connection signal="pressed" from="Settings/GoBack" to="." method="goto_mainmenu"]
[connection signal="pressed" from="Controls/GoBack" to="." method="goto_settings"]
